# haskell-example

./: .gitignore  Makefile  README.md  VSCode-Setup.md  haskell-example.cabal  hie.yaml
app/: Main.hs
src/TaskManager/Controller/: TaskController.hs
src/TaskManager/Model/: Priority.hs  Status.hs  Task.hs
src/TaskManager/Persistence/: FileStore.hs
src/TaskManager/View/: CLI.hs  TUI.hs
test/: Spec.hs
test/TaskManager/Controller/: TaskControllerSpec.hs
test/TaskManager/Model/: TaskSpec.hs
