cabal-version: 2.4
name: haskell-example
version: 0.1.0.0
synopsis: A simple Haskell example project
description: Basic Haskell project for learning and experimentation
license: MIT
author: Your Name
maintainer: your.email@example.com
category: Example
build-type: Simple

executable haskell-example
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base ^>=4.14