cabal-version: 2.4
name: haskell-example
version: 0.1.0.0
synopsis: Type-safe task management CLI
description: A command-line task manager built with Haskell's type system
license: MIT
author: Your Name
maintainer: your.email@example.com
category: Productivity
build-type: Simple

common common-options
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates

library
    import: common-options
    hs-source-dirs: src
    exposed-modules:
        TaskManager.Model.Task
        TaskManager.Model.Priority
        TaskManager.Model.Status
        TaskManager.Controller.TaskController
        TaskManager.View.CLI
        TaskManager.Persistence.FileStore
    build-depends:
        base ^>=4.14,
        aeson ^>=2.0,
        time ^>=1.9,
        bytestring ^>=0.11,
        text ^>=1.2

executable task-manager
    import: common-options
    main-is: Main.hs
    hs-source-dirs: app
    build-depends:
        base ^>=4.14,
        haskell-example

test-suite task-manager-test
    import: common-options
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:
        TaskManager.Model.TaskSpec
        TaskManager.Controller.TaskControllerSpec
    build-depends:
        base ^>=4.14,
        haskell-example,
        hspec ^>=2.7,
        QuickCheck ^>=2.14